# servidor_http

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: run-clippy.yml  run-merge-tests.yml
src/: lib.rs  main.rs  package.rs  request.rs  response.rs  router.rs
src/request/: cookie_list.rs  method.rs  mod.rs  query.rs
src/response/: file_mime.rs  mod.rs  status.rs
src/router/: mod.rs  route.rs
tests/: test_request.rs  test_response.rs
tests/res/: test.html
tests/res/static/: test.css
